SOC-433: fix table clipping issue on tokens tab component

--- a/web-ui-angular/elements-web-ui/src/app/neo-smart-contracts-list/neo-smart-contracts-list.component.css
+++ b/web-ui-angular/elements-web-ui/src/app/neo-smart-contracts-list/neo-smart-contracts-list.component.css
@@ -36,3 +36,7 @@ input[type="button"] {
   max-width: 99px;
   min-width: 99px;
 }
+
+.tab {
+  margin-left: 10px;
+}
